--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,19 +7,31 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+    - name: Checkout koda
+      uses: actions/checkout@v3
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Nastavi .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: '7.0.x'
 
-      - name: Build and Push image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: jsevnik/trgovinaelektronika:latest
+    - name: Restore nuget
+      run: dotnet restore
+
+    - name: Poženi unit teste
+      run: dotnet test TrgovinaElektronika.Tests/TrgovinaElektronika.Tests.csproj
+
+    - name: Prijava v DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build in Push Docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: jsvnk/trgovinaelektronika:latest
